- more prominent example

--- a/yourappname.kv
+++ b/yourappname.kv
@@ -24,8 +24,8 @@ TestGame:
             gameworld: gameworld
             system_id: 'renderer'
             zones: ['general']
-            frame_count: 6
-            force_update: False
+            frame_count: 7
+            force_update: True
             shader_source: 'assets/glsl/positionshader.glsl'
 
     GameScreenManager:
