--- a/yourappname.kv
+++ b/yourappname.kv
@@ -14,6 +14,7 @@ TestGame:
         system_count: 2
         zones: {'general': 150000}
         update_time: 6
+        debug: True
 
         PositionSystem2D:
             system_id: 'position'
@@ -25,8 +26,7 @@ TestGame:
             gameworld: gameworld
             system_id: 'renderer'
             zones: ['general']
-            #frame_count: 6
-            updateable: True
+            frame_count: 6
             shader_source: 'assets/glsl/positionshader.glsl'
 
     GameScreenManager:
