- modified, keep only N textures visible on screen simultaneously

--- a/yourappname.kv
+++ b/yourappname.kv
@@ -13,7 +13,7 @@ TestGame:
         size_of_gameworld: 150*1024
         system_count: 2
         zones: {'general': 150000}
-        update_time: 2
+        #update_time: 2
         debug: True
 
         PositionSystem2D:
